tests/parsing/space_in_indent/stderr.golden
error: multi indent increase, previous indent 0 , current indent 2
bus.fbd +2:1
   |
 2 |     width = 1
   | ^^^^
